--- a/web.html
+++ b/web.html
@@ -72,7 +72,7 @@
                 const PaymentMethod = document.querySelector('input[name="PaymentMethod"]').value;
                 
 
-                // Add logic to fetch prediction result from your server/API
+                // Add logic to fetch prediction result from server/API
                 const prediction = 'Churn Prediction: High'; // Replace with actual prediction
 
                 // Update and show the result section
